Horizontal scroll fixed.

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -22,7 +22,7 @@ header .item img {
   display: block;
 }
 
-header .row {
+header .row, header .item {
   margin-right: 0 !important;
 }
 
